# selfDrivingCar

./: README.md  arduinoSketchG8.ino
group-8/sources/OpenDaVINCI-msv/: Data.odvd
group-8/sources/OpenDaVINCI-msv/apps/: CMakeLists.txt
group-8/sources/OpenDaVINCI-msv/apps/driver/src/: Driver.cpp
group-8/sources/OpenDaVINCI-msv/apps/lanedetector/: CMakeLists.txt
group-8/sources/OpenDaVINCI-msv/apps/lanedetector/include/: LaneDetector.h  Lines.h
group-8/sources/OpenDaVINCI-msv/apps/lanedetector/src/: LaneDetector.cpp  Lines.cpp
group-8/sources/OpenDaVINCI-msv/apps/lanedetector/testsuites/: LaneDetectorReplayTestsuite.h  (+1 more)
group-8/sources/OpenDaVINCI-msv/apps/parker/: CMakeLists.txt
group-8/sources/OpenDaVINCI-msv/apps/parker/apps/: MainModule.cpp
group-8/sources/OpenDaVINCI-msv/apps/parker/include/: Parker.h
group-8/sources/OpenDaVINCI-msv/apps/parker/src/: Parker.cpp
project-template/sources/OpenDaVINCI-msv/: generateDataStructures.sh
project-template/sources/OpenDaVINCI-msv/libopendavinci/testsuites/: ConferenceClientModuleTestSuite.h  ControlFlowTestSuite.h  DMCPDiscovererTestSuite.h
project-template/sources/OpenDaVINCI-msv/supercomponent/: configuration
project-template/sources/OpenDaVINCI-msv/supercomponent/include/: ConnectedModules.h
project-template/sources/OpenDaVINCI-msv/supercomponent/src/: ConnectedModules.cpp  SuperComponent.cpp
project-template/sources/OpenDaVINCI-msv/supercomponent/testsuites/: ManagedLevelTestSuite.h  SupercomponentClientModuleTestSuite.h
project-template/sources/STM32F4/embedded/ChibiOS/: ChibiOS_2.6.5.patch
(+84 files in other folders)
